# MAGIC

./: .gitignore  README-DEV.md  README-UX.md  README.md
src/desktop/javascript/cli/: main.js
src/desktop/swift/MAGICPOD/: .travis.yml  MAGICPOD.podspec  Network.swift  README.md
src/embedded/: Dockerfile  Dockerfile.nrf  README.md
src/embedded/arduino/: MAGIC_TEST.ino
src/embedded/ble-sessionless/: platformio.ini
src/embedded/ble-sessionless/src/: main.cpp
src/embedded/lora-gateway-nesso/: README.md  platformio.ini
src/embedded/lora-gateway-nesso/src/: main.cpp
src/embedded/lora-gateway-umpros3/: .gitignore  platformio.ini
src/embedded/lora-gateway-umpros3/src/: main.cpp
src/embedded/lora-server/: .gitignore  README.md  package-lock.json  package.json  server.js
src/embedded/lora-sessionless/: README.md  platformio.ini
src/embedded/project/: CMakeLists.txt  prj.conf
src/embedded/project/src/: bluetooth.cpp  bluetooth.h  gpio.cpp  gpio.h  main.cpp
src/embedded/zephyr/: prj.conf
src/games/minecraft/: README.md  build.gradle  gradle.properties
src/macos/BLEBridge/: Package.swift
src/server/javascript/: obs-to-socketio.js  package-lock.json  package.json  server.js  server2.js  users.json
src/streaming/obs/: demo.py  process.py
src/utils/: emojicoding.html
src/wiki/wiki-plugin-magic/: README.md  factory.json  package-lock.json  package.json
test/: main.js
test/mocha/: gateway.js  package-lock.json  package.json  test.js
test/src/commands/: resolve-test.js
test/src/requests/: register.js  resolve.js
(+118 files in other folders)
